# Flask-Setup

./: README.md  pyproject.toml
src/: requirements.txt  run.py
src/flask_setup_jackablett.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: __init__.py
src/utils/examples/: index.html  layout.html  package.json  run.py  tailwind.config.js
src/utils/examples/api/app/: __init__.py
src/utils/examples/api/app/router/: api.py
src/utils/examples/basic-api/app/: __init__.py
src/utils/examples/basic-api/app/templates/: index.html
src/utils/examples/basic/app/: __init__.py
src/utils/examples/basic/app/router/: views.py
src/utils/examples/basic/app/templates/: index.html
src/utils/examples/flask-admin/templates/: my_master.html
