[project]
name = "flask_setup_jackablett"
version = "0.0.1"
authors = [
    { name="Jack Ablett", email="author@example.com" },
]
description = "Python module to quickly create Flask apps"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jackablett/Flask-Setup"
Issues = "https://github.com/jackablett/Flask-Setup/issues"